# fastapi-llm-streaming-sse-vs-websocket

./: README.md  pyproject.toml
app/: __init__.py  client.py  guidance.py  llm.py  llm_mock.py  main.py  sse.py  ws.py
app/static/: index.html  ws.html
tests/: test_client.py  test_guidance.py  test_llm.py  test_llm_mock.py  test_main.py  test_sse.py  test_stress.py  test_ws.py  test_ws_client.py
