[project]
name = "fastapi-llm-streaming-sse-vs-websocket"
version = "0.1.0"
description = "Companion code for an SSE-vs-WebSocket LLM streaming tutorial."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "openai>=2.43.0",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
